<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="240dp"
    android:background="@drawable/rectangle_background_white_border_radius_18dp"
    android:orientation="vertical"
    android:weightSum="412">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="98">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/incorrect_pin_code"
                android:textColor="@android:color/black"
                android:textSize="23sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/please_input_again"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                android:textStyle="normal" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/btnClose"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="314">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/close"
            android:textColor="#2b8988"
            android:textSize="26sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="top"
            android:background="#e9e9e9" />
    </FrameLayout>

</LinearLayout>
