<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_pincode_success"
    tools:context=".EnterPinCode.EnterCodeSuccessView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/welcome_to_cabby"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_16sdp"
                    android:focusable="false"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/your_account_has_been_activated"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_16sdp"
                    android:focusable="false"/>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnOk"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:layout_gravity="bottom"
        android:background="@drawable/background_orange"
        android:text="@string/ok"
        android:textAllCaps="true"
        android:textColor="#2c3e50"
        android:textSize="@dimen/_20sdp" />
</FrameLayout>
