<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bhtech.com.cabbydriver.FinishWork.FinishWorkView">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/tvTodayDate"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:paddingLeft="25dp"
                android:textColor="#6f6f6f"
                android:textSize="16sp"/>

            <ListView
                android:id="@+id/work_summary"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:divider="@color/gray_border"
                android:dividerHeight="0dp"
                >

            </ListView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="3">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:gravity="center"
                    android:text="@string/finishwork_mileage_msg"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textColor="@color/gray_text_car"
                    android:layout_weight="1"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:text="@string/finishwork_mileage_title"
                    android:textAlignment="center"
                    android:textSize="35sp"
                    android:textColor="@color/black"
                    android:layout_weight="1"/>

                <EditText
                    android:gravity="center"
                    android:id="@+id/etTodayMileage"
                    android:layout_width="280dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="70dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/rectangle_background_white_gray_border_radius_40"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:hint="**,*** km"
                    android:textSize="30sp"
                    android:layout_weight="1">
                </EditText>

                <Button
                    android:id="@+id/btnFinishWork"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:background="@drawable/background_orange"
                    android:text="@string/finishwork_button"/>

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</FrameLayout>
