<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bhtech.com.cabbydriver.ChangeDropOffLocation.ChangeDropOffLocationView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/layoutPickUpLocation"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#f7f9f9">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:gravity="center_vertical"
                    android:text="@string/change_destination"
                    android:textColor="#2c3e50"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <FrameLayout
                    android:id="@+id/btnX"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="right|center_vertical"
                    android:padding="15dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/icon_x2" />
                </FrameLayout>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/layoutType"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="#fcfcfc">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:orientation="vertical">

                    <AutoCompleteTextView
                        android:id="@+id/actvPickUpLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:hint="@string/type_a_new_destination_place"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:textColorHint="#858a8e" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/btnCancel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="20dp"
                            android:background="@drawable/background_gray_border_brown_radius_15"
                            android:gravity="center"
                            android:paddingBottom="10dp"
                            android:paddingLeft="20sp"
                            android:paddingRight="20dp"
                            android:paddingTop="10dp"
                            android:text="@string/Cancel"
                            android:textAllCaps="true"
                            android:textColor="@android:color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/btnOK"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/background_orange_border_brown_radius_15"
                            android:gravity="center"
                            android:paddingBottom="10dp"
                            android:paddingLeft="20sp"
                            android:paddingRight="20dp"
                            android:paddingTop="10dp"
                            android:text="@string/ok"
                            android:textAllCaps="true"
                            android:textColor="@android:color/black"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="bottom"
            android:layout_weight="573">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/background_orange_border_brown">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/_15sdp"
                        android:src="@drawable/icon_left" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/background_orange_border_brown">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/_18sdp"
                        android:src="@drawable/icon_go2" />
                </FrameLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="top"
                android:background="#bf8b22" />
        </FrameLayout>
    </LinearLayout>

</FrameLayout>
